Create Gradle convention plugin to configure driver testing.